# oa_system

./: .gitignore  Cargo.toml  README.md
document_management/: Cargo.toml
document_management/src/: lib.rs
document_management/src/comm/: mod.rs  models.rs  service_trait.rs  storage_trait.rs
document_management/src/tests/: storage_tests.rs
employee_management/src/comm/: mod.rs  models.rs  service_trait.rs  storage_trait.rs
employee_management/src/tests/: employee_tests.rs
financial_management/: Cargo.toml
financial_management/src/: lib.rs
financial_management/src/comm/: models.rs  service_trait.rs  storage_trait.rs
financial_management/src/tests/: financial_tests.rs
notification_system/src/: lib.rs
notification_system/src/comm/: in_memory_storage.rs  mod.rs  models.rs  service_trait.rs  storage_trait.rs
notification_system/src/tests/: notification_tests.rs
reporting_and_analysis/: Cargo.toml
reporting_and_analysis/src/: lib.rs
reporting_and_analysis/src/comm/: in_memory_storage.rs  mod.rs  models.rs  service_trait.rs  storage_trait.rs
reporting_and_analysis/src/tests/: chart_tests.rs  reporting_tests.rs
system_settings/: Cargo.toml
user_management/: Cargo.toml
workflow_definition/: Cargo.toml
workflow_definition/src/: lib.rs
workflow_definition/src/comm/: mod.rs  step.rs  template.rs
workflow_instance/: Cargo.toml
workflow_instance/src/: lib.rs
workflow_instance/src/comm/: api.rs  mod.rs  models.rs  storage.rs
