[package]
name = "oa_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_management = { path = "./user_management" }
workflow_definition = { path = "./workflow_definition" }
workflow_instance={path = "./workflow_instance"}
notification_system={path = "./notification_system"}
document_management={path = "./document_management"}
reporting_and_analysis={path = "./reporting_and_analysis"}
system_settings={path = "./system_settings"}
utils={path = "./utils"}